--- a/components/Extra/Extra.css
+++ b/components/Extra/Extra.css
@@ -25,9 +25,14 @@
 
 .shopbtn {
   margin-top: 20px;
-  width: 100%;
+  width: 35%;
   background-color: #5a10bf;
   border-radius: 5px;
+  transition: all .2s ease;
+}
+
+.shopbtn:hover{
+  opacity: 0.8;
 }
 
 @media only screen and (max-width: 675px) {
